--- a/_posts/2021-05-13-movie.md
+++ b/_posts/2021-05-13-movie.md
@@ -1,4 +1,5 @@
 ![allen](/assets/images/allen.png)
-![allen][allen]
-[allen]:https://lh3.googleusercontent.com/oYL6mQ31lWgaH-g7ScvBM-kznUl_A6U4aj6elUib6VaWloKKwum9lPrl41n_j8q_D9EZb3Grc2Yqiqo=w958-h959
+![allen][imitation]
+[allen]:
+https://lh3.googleusercontent.com/oYL6mQ31lWgaH-g7ScvBM-kznUl_A6U4aj6elUib6VaWloKKwum9lPrl41n_j8q_D9EZb3Grc2Yqiqo=w958-h959
 컴퓨터의 아버지라고 불리는 앨런 튜링의 이야기이다. 2차 세계대전 당시 절대 해독이 불가능한 독일의 애니그마를 해독하기 위해 앨런 튜링이 기계를 발명하는 내용이다.
